# agenticpay

./: FIX_PROPOSAL.md  Frontend: Add export to calendar  PR_DESCRIPTION_RATE_LIMITING.md  README.md
.github/workflows/: ci.yml
backend/: package-lock.json  package.json
backend/database/: backup-crypto.ts  backup-service.ts  recovery-runbook.ts
backend/emails/: email-routes.ts  email-service.ts
backend/frontend/app/: layout.tsx
backend/portfolio/: portfolio-routes.ts  portfolio-service.ts
backend/src/: app.ts  index.ts
backend/src/config/: env.ts
backend/src/controllers/: exportController.ts
backend/src/routes/: invoice.ts  stellar.ts  verification.ts
backend/src/routes/v1/: index.ts
backend/src/services/: exportService.ts  invoice.ts  stellar.ts  verification.ts
backend/src/workers/: payrollWorker.ts
contracts/: Cargo.toml
contracts/src/: lib.rs
frontend/: service-worker.ts
frontend/components/layout/: Header.tsx
frontend/components/offline/: OfflineProvider.tsx  SyncStatusIndicator.tsx
frontend/lib/: offline.ts
frontend/lib/api/: client.ts
frontend/src/__tests__/: TransactionHistory.integration.test.tsx
frontend/src/components/: BulkPaymentStatusTracker.tsx  TransactionPendingOverlay.tsx
frontend/src/hooks/: useFilterState.ts  usePayrollContracts.ts
frontend/src/pages/: CustomReportBuilder.tsx  TransactionHistory.tsx
